--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RealTimeCat Server SDK for Node.js",
   "main": "lib/realtimecat.js",
   "scripts": {
-    "test": ""
+    "test": "node ./test/test.js"
   },
   "keywords": [
     "RealTimeCat",
