--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "realtimecat-node-sdk",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "RealTimeCat Server SDK for Node.js",
   "main": "lib/realtimecat.js",
   "scripts": {
-    "test": "node ./test/test.js"
+    "test": "mocha"
   },
   "keywords": [
     "RealTimeCat",
@@ -15,7 +15,17 @@
   "author": "LearningTech",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^3.10.1",
     "request": "^2.62.0"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.1",
+    "gulp-sourcemaps": "^1.6.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
